--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
         <div class="container" >
             <a class="navbar-brand" href="#page-top" ><img src="./recursos/1B.png" class="img" width="30%" ></a>
-            <button class="navbar-toggler  font-weight-bold  text-white rounded" id="home" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
+            <button class="navbar-toggler text-uppercase font-weight-bold bss rounded" id="home" type="button" data-bs-toggle="collapse " data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
